# MultidimensionalIterativeKDE

./: README.md  pyproject.toml  requirements.txt
data/examples/: Readme
data/processed/: 314_PEPRIOR_NOREP_250_chieff.h5  314_PEPRIOR_NOREP_250_dl.h5  314_PEPRIOR_NOREP_250_m1src.h5  314_PEPRIOR_NOREP_250_m2src.h5  314_PEPRIOR_NOREP_250_redshift.h5  314_PEPRIOR_NOREP_chieff.h5  314_PEPRIOR_NOREP_dl.h5  314_PEPRIOR_NOREP_m1src.h5  314_PEPRIOR_NOREP_m2src.h5  314_PEPRIOR_NOREP_redshift.h5  Events_z_prior_Neff_chieff_prior_Neff.txt  Final_noncosmo_GWTC3_dL_datafile.h5  Final_noncosmo_GWTC3_m1srcdatafile.h5  Final_noncosmo_GWTC3_m2srcdatafile.h5  Final_noncosmo_GWTC3_pdet_datafile.h5  Final_noncosmo_GWTC3_redshift_datafile.h5  Final_noncosmo_GWTC3_xieff_datafile.h5  GWTC3_NOCOSMO_12345_CFPRIOR_NOREP_chieff.h5  GWTC3_NOCOSMO_12345_CFPRIOR_NOREP_dl.h5  GWTC3_NOCOSMO_12345_CFPRIOR_NOREP_m1src.h5  GWTC3_NOCOSMO_12345_CFPRIOR_NOREP_m2src.h5  GWTC3_NOCOSMO_12345_CFPRIOR_NOREP_redshift.h5  GWTC3_NOCOSMO_12345_CHIEFF_PRIOR_VT_at_posteriors.h5  GWTC3_NOCOSMO_12345_CHIEFF_PRIOR_chieff.h5  GWTC3_NOCOSMO_12345_CHIEFF_PRIOR_dl.h5  GWTC3_NOCOSMO_12345_CHIEFF_PRIOR_m1src.h5  GWTC3_NOCOSMO_12345_CHIEFF_PRIOR_m2src.h5  (+20 more)
docs/: index.md  methods.md  setup.md
notebooks/: Readme  intro_notebook.ipynb
scripts/: checkcosmo.py  make_specialm1m2plot.py  median_rate_m1plot.py  ofsetplot.py  paper_plot_utils.py  plot_m2slice.py  plot_reweighted_samples.py  postprocessIterativedata.py  run_2d_analysis.py  twoDAnalysisplots.py  utils_plot.py
tests/: test_kde.py  test_selection.py
(+53 files in other folders)
